@@ -47,6 +47,7 @@ void suggest_bluetooth_off(void);
 void suggest_nmi_watchdog(void);
 void suggest_hpet(void);
 void suggest_ac97_powersave(void);
+void suggest_wireless_powersave(void);
 
 
 
